--- a/html-css/exercicios/d009/style.css
+++ b/html-css/exercicios/d009/style.css
@@ -1,14 +1,20 @@
 @charset "UTF-8";
 
 body{
-    
+
     background-color: rgb(29, 26, 26);
 }
 h1{
     text-align: center;
     color: white;
 }
+a{
+    text-align: center;
+}
 section{
-    width: auto;
-    height: auto;
+    padding: 0 650px;
+   
+}
+picture{
+        
 }
