--- a/html-css/desafios/d009/style.css
+++ b/html-css/desafios/d009/style.css
@@ -1,17 +1,26 @@
 @charset "UTF-8";
 
-body{
+* {
+    text-align: center;
+}
+
+body {
 
     background-color: rgb(29, 26, 26);
 }
-h1{
-    text-align: center;
+
+main {
+    width: 600px;
+    margin: auto;
+    
+}
+
+h1 {
+    color: white;
+    font-size: 50px;
+}
+
+a {
     color: white;
 }
-a{
-    text-align: center;
-}
-section{
-    padding: 0 650px;
-   
-}
+
