--- a/exercicios/ex026/mq002/style/paisagem.css
+++ b/exercicios/ex026/mq002/style/paisagem.css
@@ -1,2 +1,6 @@
 @charset "UTF-8";
-/* Aparelho landscape (deitado)*/
+/* Aparelho deitado (landscape)*/
+body{
+    background-image: url(../image/cev-landscape.jpg);
+    background-position: left bottom;
+}
